# File_Manager

./: CMakeLists.txt  DirectoryAnalyzer.cpp  Directory_Utils.py  File_Manager.py  Makefile  README.md  build.ps1  build_and_run.ps1  comando_pyinstaller.txt  compile_gpp.bat  compile_with_gpp.ps1  directory_changes.db  directory_utils_v006.py  file_manager_v001.py  file_manager_v002.py  file_manager_v003.py  file_manager_v004.py  file_manager_v005.py  file_manager_v006.py  moc_DirectoryAnalyzer.cpp  quick_compile.ps1  requirements.txt  run_compile.bat
